Fix footer CTA height and width on mobile
- no longer huge blank spaces on the page
- no longer does the Recaptcha force the viewport too wide on phone-width browsers

--- a/wp-content/themes/freshenergy/less/child.less
+++ b/wp-content/themes/freshenergy/less/child.less
@@ -274,8 +274,8 @@ img.header_img {
     bottom:0;
     margin-bottom:0;
     min-height:520px;
-    height: -moz-available;          
-    height: -webkit-fill-available;  
+    height: -moz-available;
+    height: -webkit-fill-available;
     height: fill-available;
 
     button,
@@ -1079,7 +1079,10 @@ body.normal.single-post {
   }
 
   #fe-cta-footer .widget {
-    min-height:0;
+    min-height: auto;
+    height: auto;
+    padding-left: 1em;
+    padding-right: 1em;
 
     &.span6 {
     width: 100%;
